--- a/roles/lance/tasks/main.yml
+++ b/roles/lance/tasks/main.yml
@@ -1,23 +1,23 @@
-# Manifest of lance
-
-- name: hi
-  debug:
-    msg: "base dir {{ playbook_dir }}"
-
 - name: Include role - common
   include_role: 
     name: common
 
 - name: Run lance - prerequisites
-  import_tasks: tasks/prereqs.yml
+  import_tasks: prereqs.yml
 
-- name: Include role - workstation
+- name: include role - workstation
   include_role:
     name: workstation
 
-- name: Include role - developer
+- name: include role - developer
   include_role:
     name: developer
+
+- name: shell
+  import_tasks: shell.yml
+
+- name: configure
+  import_tasks: dotfiles.yml
 
 
 # lance-specific setup, ensure you're a user, setup directories, copy config files
