--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 inventory = hosts
-log_path = /var/log/ansible.log
+# log_path = /var/log/ansible.log
 retry_files_enabled = False
 nocows = 1
