--- a/roles/lance/tasks/main.yml
+++ b/roles/lance/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: Include role - common
-  include_role: 
+  include_role:
     name: common
 
 - name: Run lance - prerequisites
@@ -21,6 +21,15 @@
 
 - import_tasks: playbooks/software/neovim.yml
 - import_tasks: playbooks/software/starship.yml
+
+- name: tmux > install tmux plugin manager
+  become_user: lance
+  ansible.builtin.git:
+    clone: yes
+    repo: https://github.com/tmux-plugins/tpm
+    dest: /home/lance/.tmux/plugins/tpm
+    force: no
+
 
 # Tasks I need to organize
 # TODO: Figure out how to install rust
