--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -1,3 +1,4 @@
+---
 - name: Install software packages
   ansible.builtin.dnf:
     name: "{{ item }}"
@@ -20,3 +21,7 @@
     - xclip
     - zlib-devel
   when: ansible_distribution == "Fedora"
+
+- name: Install system packages
+  command: brew bundle --file={{ ansible_env.HOME }}/.dotfiles/Brewfile
+  when: ansible_os_family == "Darwin"
