--- a/tasks/software.yml
+++ b/tasks/software.yml
@@ -1,4 +1,4 @@
 ---
 - name: Install software using brew bundle
-  command: brew bundle --file={{ ansible_env.HOME }}/.dotfiles/Caskfile
+  command: brew bundle --file="{{ ansible_env.HOME }}/.dotfiles/Caskfile"
   when: ansible_os_family == "Darwin"
