--- a/roles/lance/tasks/main.yml
+++ b/roles/lance/tasks/main.yml
@@ -11,6 +11,10 @@
 
 - import_tasks: shell.yml
 - import_tasks: dotfiles.yml
+- import_tasks: asdf.yml
+- import_tasks: password_manager.yml
 - import_tasks: playbooks/software/anki.yml
 - import_tasks: playbooks/software/pdfreader.yml
 - import_tasks: playbooks/software/starship.yml
+- import_tasks: playbooks/software/tmux.yml
+- import_tasks: playbooks/software/zoom.yml
