Add signal playbook

--- a/roles/lance/tasks/main.yml
+++ b/roles/lance/tasks/main.yml
@@ -15,6 +15,7 @@
 - import_tasks: password_manager.yml
 - import_tasks: playbooks/software/anki.yml
 - import_tasks: playbooks/software/pdfreader.yml
+- import_tasks: playbooks/software/signal.yml
 - import_tasks: playbooks/software/starship.yml
 - import_tasks: playbooks/software/tmux.yml
 - import_tasks: playbooks/software/zoom.yml
